2001-04-12  Martin Baulig  <baulig@suse.de>

	* gnome-program.h (GnomeModuleHook): The `GnomeModuleInfo' argument
	is deep-copied, so you can actually modify it.

2001-04-12  Martin Baulig  <baulig@suse.de>

	* libgnome.h (libgnome_module_info): Added external declaration.

	* gnomelib-init.c: Renamed to libgnome-init.c.

	* gnomelib-init.h: Removed.

2001-04-11  Martin Baulig  <baulig@suse.de>

	* gnome-util.h (gnome_libdir_file, gnome_datadir_file,
	gnome_sound_file, gnome_pixmap_file, gnome_config_file,
	gnome_help_file, gnome_app_help_file): Removed.
	(gnome_unconditional_*_file): Removed.

2001-04-11  Martin Baulig  <baulig@suse.de>

	* gnome-config.c (access_config_extended): Use
	gnome_program_locate_file() instead of gnome_config_file().

	* gnome-fileconvert.c (gfc_read_FileConverters): Use
	gnome_program_locate_file().

2001-04-11  Martin Baulig  <baulig@suse.de>

	* gnome-program.c (gnome_program_locate_file): Return NULL if
	`ret_locations' is given.

	* gnome-program.c (gnome_program_initv): Call libgnome_type_init ()
	instead of g_type_init (), moved g_type_init () call into
	libgnome_type_init ().

	* libgnomeP.h (libgnome_type_init): Added function prototype.

	* Makefile.am: Create libgnome.defs and the type stuff using
	gnome-maketypes.awk and gnome-makeenums.pl.

	* libgnome-boxed.defs: New file.

	* libgnometypes.c: New file.

2001-04-11  Martin Baulig  <baulig@suse.de>

	* libgnome.h: Use #include <libgnome/*.h> instead of "libgnome/*.h"
	and #include <libgnome/gnome-ditem.h>.

2001-04-11  Martin Baulig  <baulig@suse.de>

	* gnome-util.h (PATH_SEP, PATH_SEP_STR): Moved to libgnomeP.h.
	(g_is_image_filename): Removed function prototype.

	* gnome-util.h (g_file_exists): Removed; use g_file_test() instead.

2001-03-24  Martin Baulig  <baulig@suse.de>

	* libgnome-2.0.pc.in: Depend on gconf-2.0.

2001-02-26  jacob berkman  <jacob@ximian.com>

	* gnome-url.c: default to using nautilus for help browsing if it
	is available
