@@ -1,5 +1,12 @@
 2001-04-12  Martin Baulig  <baulig@suse.de>
 
+	* gnome-gconf.[ch]: New files; copied here from
+	libgnomeui-2/libgnomeui.
+
+	* libgnome.h: Added <libgnome/gnome-gconf.h>.
+
+2001-04-12  Martin Baulig  <baulig@suse.de>
+
 	* gnome-program.h (GnomeModuleHook): The `GnomeModuleInfo' argument
 	is deep-copied, so you can actually modify it.
 
